<resources>
    <string name="app_name">assignment1b</string>
    <string name="title">Temperature Conversion</string>
    <string name="input_temperature_label">Temperature: </string>
    <string name="input_temperature_placeholder">Enter Temperature</string>
    <string name="input_temperature"> </string>
    <string name="converted_temperature_label">Conversion: </string>
    <string name="converted_temperature">N/A</string>
    <string name="radio_group_label">Select conversion: </string>
    <string name="c_to_f">C to F</string>
    <string name="f_to_c">F to C</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
</resources>